--- a/chal-mlflow/challenge/nsjail.cfg
+++ b/chal-mlflow/challenge/nsjail.cfg
@@ -41,6 +41,11 @@ mount: [
     rw: true
   },
   {
+    dst: "/mlruns"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
     dst: "/home/user"
     fstype: "tmpfs"
     rw: true
@@ -64,11 +69,11 @@ mount: [
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
     is_bind: true
-  },
-  {
-    src: "/chroot/.mlflow/credentials"
-    dst: "/.mlflow/credentials"
-    is_bind: true
-    rw: true
   }
+  #{
+  #  src: "/chroot/.mlflow"
+  #  dst: "/.mlflow"
+  #  is_bind: true
+  #  rw: true
+  #}
 ]
