--- a/chal-mlflow/challenge/Dockerfile
+++ b/chal-mlflow/challenge/Dockerfile
@@ -16,12 +16,14 @@ FROM ghcr.io/mlflow/mlflow as chroot
 RUN /usr/sbin/useradd -m -u 1000 user
 
 RUN pip install mlflow 
-RUN mkdir -p /.mlflow /.mlflow/credentials
-COPY start.sh /usr/local/bin/start.sh
-RUN chmod +x /usr/local/bin/start.sh
-RUN chown -Rc user /.mlflow/credentials
+RUN mkdir -p /.mlflow 
+ADD start.sh /start.sh
+RUN chmod +x /start.sh
+#RUN chown -Rc user /.mlflow
 
-VOLUME /mlruns
+ADD basic_auth.db /
+
+
 VOLUME /tmp
 
 RUN echo 'deb http://archive.debian.org/debian/ bullseye main' >> /etc/apt/sources.list
@@ -30,16 +32,16 @@ RUN apt-get install socat -y --force-yes; exit 0
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
-VOLUME /chroot/.mlflow/credentials
+#VOLUME /chroot/.mlflow
+VOLUME /chroot/mlruns
 
 COPY --from=chroot / /chroot
 
 COPY nsjail.cfg /home/user/nsjail.cfg
 
 CMD kctf_setup \
-    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start.sh)
+    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /start.sh)
 
-#CMD ["mlflow", "server", "--host", "0.0.0.0"]
 
 #to run with auth
 #/usr/local/bin/mlflow server --host 0.0.0.0 --app-name basic-auth
