--- a/chal-mlflow/challenge/nsjail.cfg
+++ b/chal-mlflow/challenge/nsjail.cfg
@@ -36,6 +36,12 @@ mount: [
     is_bind: true
   },
   {
+    src: "/chroot/logs"
+    dst: "/logs"
+    is_bind: true
+    rw: true
+  },
+  {
     dst: "/tmp"
     fstype: "tmpfs"
     rw: true
