--- a/chal-apache/challenge/Dockerfile
+++ b/chal-apache/challenge/Dockerfile
@@ -30,13 +30,20 @@ RUN echo 'deb http://archive.debian.org/debian/ rodete main' >> /etc/apt/sources
 RUN apt-get update; exit 0
 RUN apt-get install socat -y --force-yes; exit 0
 
+RUN mkdir -p /logs
+RUN touch /logs/log
+RUN chmod -R +777 /logs
+
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
 COPY --from=chroot / /chroot
 RUN chown -Rc user /chroot/home/user
 
+VOLUME /chroot/logs
+
 VOLUME /chroot/usr/local/apache2/logs
 COPY nsjail.cfg /home/user/nsjail.cfg
 
 CMD kctf_setup \
-    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start_apache.sh)
+    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start_apache.sh) & \
+    tail -f /chroot/logs/log
