--- a/chal-apache/challenge/nsjail.cfg
+++ b/chal-apache/challenge/nsjail.cfg
@@ -28,6 +28,17 @@ mount: [
     is_bind: true
   },
   {
+    src: "/chroot/logs"
+    dst: "/logs"
+    is_bind: true
+    rw: true
+  },
+  {
+    src: "/chroot/flag"
+    dst: "/flag"
+    is_bind: true
+  },
+  {
     dst: "/proc"
     fstype: "proc"
     rw: true
