--- a/chal-mlflow/app-secrets.yaml
+++ b/chal-mlflow/app-secrets.yaml
@@ -8,3 +8,7 @@ spec:
     secrets: |
       - resourceName: "projects/internet-ctf/secrets/mlflow-exposed-auth-bypass-flag/versions/1"
         path: "flag.txt"
+      - resourceName: "projects/internet-ctf/secrets/mlflow-root-dir-flag/versions/1"
+        path: "flag-root.txt"
+      - resourceName: "projects/internet-ctf/secrets/mlflow-exposed-auth-bypass-password/versions/1"
+        path: "password.txt"      
