--- a/chal-mlflow/challenge/Dockerfile
+++ b/chal-mlflow/challenge/Dockerfile
@@ -29,7 +29,7 @@ VOLUME /tmp
 
 RUN echo 'deb http://archive.debian.org/debian/ bullseye main' >> /etc/apt/sources.list
 RUN apt-get update; exit 0
-RUN apt-get install socat -y --force-yes; exit 0
+RUN apt-get install socat sqlite3 -y --force-yes; exit 0
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
@@ -44,5 +44,5 @@ COPY nsjail.cfg /home/user/nsjail.cfg
 
 CMD sed -i "1 a$(cat /flag/flag.txt)" /chroot/usr/local/lib/python3.10/site-packages/mlflow/server/js/build/index.html; \
     kctf_setup \
-    && kctf_drop_privs nsjail -E ROOTFLAG=$(cat /flag/flag-root.txt) --config /home/user/nsjail.cfg --port 1337 -- /start.sh & \
+    && kctf_drop_privs nsjail -E PASSWORD=$(cat /flag/password.txt) -E ROOTFLAG=$(cat /flag/flag-root.txt) --config /home/user/nsjail.cfg --port 1337 -- /start.sh & \
     tail -f /chroot/logs/log
