--- a/chal-laravel-latest/challenge/nsjail.cfg
+++ b/chal-laravel-latest/challenge/nsjail.cfg
@@ -13,19 +13,13 @@
 # limitations under the License.
 
 # See options available at https://github.com/google/nsjail/blob/master/config.proto
-name: "default-nsjail-configuration"
-description: "Default nsjail configuration for pwnable-style CTF task."
+name: "laravel-nsjail-configuration"
+description: "nsjail configuration for Laravel in a chroot environment."
 
 mode: ONCE
-
-uidmap {
-  inside_id: 1000
-}
-
-gidmap {
-  inside_id: 1000
-}
-
+uidmap {inside_id: "1000"}
+gidmap {inside_id: "1000"}
+mount_proc: true
 rlimit_as_type: HARD
 rlimit_cpu_type: HARD
 rlimit_nofile_type: HARD
@@ -35,38 +29,48 @@ cwd: "/home/user"
 
 mount: [
   {
-    src: "/chroot",
-    dst: "/",
+    src: "/chroot"
+    dst: "/"
     is_bind: true
   },
   {
-    dst: "/proc",
-    fstype: "proc",
+    dst: "/var/www/html/laravel/storage"
+    fstype: "tmpfs"
     rw: true
   },
   {
-    src: "/chroot/home/user",
-    dst: "/home/user",
-    is_bind: true
-  },
-  {
-    src: "/etc/resolv.conf",
-    dst: "/etc/resolv.conf",
-    is_bind: true
-  },
-  {
-    src: "/dev",
-    dst: "/dev",
-    is_bind: true
-  },
-  {
-    src: "/dev/null",
-    dst: "/dev/null",
-    is_bind: true
-  },
-  {
-    dst: "/tmp",
-    fstype: "tmpfs",
+    dst: "/proc"
+    fstype: "proc"
     rw: true
+  },
+  {
+    dst: "/tmp"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
+    src: "/dev"
+    dst: "/dev"
+    is_bind: true
+  },
+  {
+    src: "/dev/null"
+    dst: "/dev/null"
+    is_bind: true
+  },
+  {
+    src: "/dev/random"
+    dst: "/dev/random"
+    is_bind: true
+  },
+  {
+    dst: "/dev/urandom"
+    src: "/dev/urandom"
+    is_bind: true
+  },
+  {
+    src: "/etc/resolv.conf"
+    dst: "/etc/resolv.conf"
+    is_bind: true
   }
 ]
