--- a/chal-laravel-latest/challenge/Dockerfile
+++ b/chal-laravel-latest/challenge/Dockerfile
@@ -17,6 +17,7 @@ RUN /usr/sbin/useradd --no-create-home -u 1000 user
 
 COPY start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
+ENTRYPOINT ["/usr/local/bin/start.sh"]
 
 ENV APP_ROOT /var/www/html/laravel
 ENV ROUTES_DIR $APP_ROOT/routes
@@ -26,6 +27,7 @@ ENV COMPOSER_BIN /usr/local/bin/composer/composer.phar
 RUN apt-get update && apt-get install -y \
     libonig-dev \
     libzip-dev \
+    libxml2 \
     autoconf \
     pkg-config \
     libssl-dev \
@@ -48,8 +50,9 @@ RUN git clone https://github.com/laravel/laravel.git $APP_ROOT \
     && cd $APP_ROOT \
     && $COMPOSER_BIN install
 
-
 VOLUME /var/www/html/laravel/storage
+RUN apt-get update; exit 0
+RUN apt-get install socat -y --force-yes; exit 0
 
 RUN mkdir -p $ROUTES_DIR
 
@@ -57,17 +60,17 @@ RUN echo "Route::get('/', function() {return view('welcome');});" >> $ROUTES_DIR
 
 RUN cp /var/www/html/laravel/.env.example /var/www/html/laravel/.env \
     && sed -i -e "s/APP_KEY=.*$/APP_KEY=base64:your-base64-encoded-key-here/g" /var/www/html/laravel/.env
-
+    
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
-# Copy files from chroot image
+
 COPY --from=chroot / /chroot
 RUN chown -Rc user /chroot/home/user
 VOLUME /chroot/home/user/
+VOLUME /chroot/var/www/html/laravel/
 
-# Copy nsjail configuration
 COPY nsjail.cfg /home/user/nsjail.cfg
 
 CMD kctf_setup \
-    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 8000 -- /usr/local/bin/start.sh)
+    && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start.sh)
 
 #ENTRYPOINT ["/usr/local/bin/php", "/var/www/html/laravel/artisan", "serve", "--host=0.0.0.0"]
