--- a/chal-laravel-latest/challenge/nsjail.cfg
+++ b/chal-laravel-latest/challenge/nsjail.cfg
@@ -19,11 +19,6 @@ description: "nsjail configuration for Laravel in a chroot environment."
 mode: ONCE
 uidmap {inside_id: "1000"}
 gidmap {inside_id: "1000"}
-mount_proc: true
-rlimit_as_type: HARD
-rlimit_cpu_type: HARD
-rlimit_nofile_type: HARD
-rlimit_nproc_type: HARD
 
 cwd: "/home/user"
 
@@ -32,6 +27,12 @@ mount: [
     src: "/chroot"
     dst: "/"
     is_bind: true
+  },
+  {
+    src: "/chroot/logs"
+    dst: "/logs"
+    is_bind: true
+    rw: true
   },
   {
     dst: "/var/www/html/laravel/storage"
