--- a/chal-laravel-latest/challenge/Dockerfile
+++ b/chal-laravel-latest/challenge/Dockerfile
@@ -36,7 +36,9 @@ RUN apt-get update && apt-get install -y \
     libjpeg62-turbo-dev \
     zlib1g-dev \
     socat \
-    unzip 
+    unzip \
+    sqlite3
+
 RUN docker-php-ext-configure pcntl --enable-pcntl \
     && docker-php-ext-install pcntl
 RUN curl -sS https://getcomposer.org/installer | php \
@@ -47,12 +49,16 @@ RUN curl -sS https://getcomposer.org/installer | php \
 RUN git clone https://github.com/laravel/laravel.git $APP_ROOT \
     && cd $APP_ROOT \
     && $COMPOSER_BIN install \
-    $COMPOSER_BIN require laravel/pail 
+    && $COMPOSER_BIN require laravel/pail 
 
 RUN mkdir -p /home/user && mkdir -p $ROUTES_DIR
 RUN echo "Route::get('/', function() {return view('welcome');});" >> $ROUTES_DIR/web.php
-RUN cp /var/www/html/laravel/.env.example /var/www/html/laravel/.env \
-    && sed -i -e "s/APP_KEY=.*$/APP_KEY=base64:your-base64-encoded-key-here/g" /var/www/html/laravel/.env
+RUN cp $APP_ROOT/.env.example $APP_ROOT/.env \
+    && sed -i -e "s;^APP_KEY=.*$;APP_KEY=base64:9UZUmEfHhV7WXXYewtNRtCxAYdQt44IAgJUKXk2ehRk=;" $APP_ROOT/.env \
+    && echo "WARNING: USING HARD CODED APP_KEY" && grep "^APP_KEY" $APP_ROOT/.env
+RUN chmod -R 777 /var/www/html/laravel/database/
+RUN mkdir -p /var/www/html/laravel/database
+RUN touch /var/www/html/laravel/database/database.sqlite
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
