--- a/chal-laravel-latest/challenge/nsjail.cfg
+++ b/chal-laravel-latest/challenge/nsjail.cfg
@@ -16,7 +16,8 @@
 name: "laravel-nsjail-configuration"
 description: "nsjail configuration for Laravel in a chroot environment."
 
-mode: ONCE
+mode: LISTEN
+hostname: "localhost"
 uidmap {inside_id: "1000"}
 gidmap {inside_id: "1000"}
 
