--- a/chal-laravel-latest/challenge/nsjail.cfg
+++ b/chal-laravel-latest/challenge/nsjail.cfg
@@ -16,10 +16,14 @@
 name: "laravel-nsjail-configuration"
 description: "nsjail configuration for Laravel in a chroot environment."
 
-mode: LISTEN
-hostname: "localhost"
+mode: ONCE
+hostname: "127.0.0.1"
 uidmap {inside_id: "1000"}
 gidmap {inside_id: "1000"}
+rlimit_as_type: HARD
+rlimit_cpu_type: HARD
+rlimit_nofile_type: HARD
+rlimit_nproc_type: HARD
 
 cwd: "/home/user"
 
@@ -36,7 +40,12 @@ mount: [
     rw: true
   },
   {
-    dst: "/var/www/html/laravel/storage"
+    dst: "var/www/html/laravel/laravel-app/storage/logs"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
+    dst: "var/www/html/laravel/laravel-app/storage/framework/views"
     fstype: "tmpfs"
     rw: true
   },
