--- a/chal-tomcat/challenge/nsjail.cfg
+++ b/chal-tomcat/challenge/nsjail.cfg
@@ -47,5 +47,41 @@ mount: [
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
     is_bind: true
+  },
+  {
+    src: "/dev"
+    dst: "/dev"
+    is_bind: true
+  },
+  {
+    src: "/dev/null"
+    dst: "/dev/null"
+    is_bind: true
+  },
+  {
+    dst: "/home/user"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
+    src: "/chroot/usr/local/tomcat"
+    dst: "/usr/local/tomcat"
+    is_bind: true
+    rw: true
+  },
+  {
+    dst: "/usr/local/tomcat/logs"
+    fstype: "tmpfs"
+    rw: true
   }
+  #{
+  #  dst: "/usr/local/tomcat/conf/Catalina"
+  #  fstype: "tmpfs"
+  #  rw: true
+  #},
+  #{
+  #  src: "/chroot/usr/local/tomcat/work"
+  #  dst: "/usr/local/tomcat/work"
+  #  is_bind: true
+  #}
 ]
