laravel-latest-working

--- a/chal-laravel-latest/challenge/nsjail.cfg
+++ b/chal-laravel-latest/challenge/nsjail.cfg
@@ -40,8 +40,24 @@ mount: [
     rw: true
   },
   {
+    dst: "home/user"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
     dst: "var/www/html/laravel/laravel-app/storage/logs"
     fstype: "tmpfs"
+    rw: true
+  },
+  {
+    dst: "var/www/html/laravel/laravel-app/storage/pail"
+    fstype: "tmpfs"
+    rw: true
+  },
+  {
+    src: "/chroot/var/www/html/laravel/laravel-app/vendor/laravel/pail"
+    dst: "/var/www/html/laravel/laravel-app/vendor/laravel/pail"
+    is_bind: true
     rw: true
   },
   {
