drupal-update-latest-nsjail

--- a/chal-drupal-latest/challenge/nsjail.cfg
+++ b/chal-drupal-latest/challenge/nsjail.cfg
@@ -21,12 +21,14 @@ mode: ONCE
 hostname: "127.0.0.1"
 uidmap {inside_id: "1000"}
 gidmap {inside_id: "1000"}
+
 rlimit_as_type: HARD
 rlimit_cpu_type: HARD
 rlimit_nofile_type: HARD
 rlimit_nproc_type: HARD
+rlimit_fsize: 6937920
 
-cwd: "/"
+cwd: "/opt/drupal/"
 
 mount: [
   {
@@ -59,16 +61,21 @@ mount: [
   #  rw: true
   #  fstype: "tmpfs"
   #},
-  #{
-  #  dst: "/opt/drupal/web/sites"
-  #  fstype: "tmpfs"
-  #  rw: true
-  #},
   {
-    dst: "/tmp/sites"
-    rw: true
+    dst: "/opt/drupal/web/sites"
     fstype: "tmpfs"
+    rw: true
   },
+  #{
+  #  src: "/chroot/var/www/html/sites"
+  #  dst: "/var/www/html/sites"
+  #  is_bind: true
+  #},
+  #{
+  #  src: "/chroot/opt/drupal/web/sites"
+  #  dst: "/opt/drupal/web/sites"
+  #  is_bind: true
+  #},
   {
     dst: "/tmp"
     fstype: "tmpfs"
