--- a/chal-drupal-latest/app-secrets.yaml
+++ b/chal-drupal-latest/app-secrets.yaml
@@ -11,4 +11,4 @@ spec:
       - resourceName: "projects/internet-ctf/secrets/drupal-latest-exposed-auth-bypass-flag/versions/1"
         path: "flag-exposed-auth-bypass.txt"
       - resourceName: "projects/internet-ctf/secrets/drupal-latest-password/versions/1"
-        path: "flag-password.txt"
+        path: "password.txt"
