--- a/chal-drupal-latest/challenge/nsjail.cfg
+++ b/chal-drupal-latest/challenge/nsjail.cfg
@@ -61,6 +61,12 @@ mount: [
     fstype: "tmpfs"
     rw: true
   },
+#  {
+#    src: "/chroot/opt/drupal/web/sites"
+#    dst: "/opt/drupal/web/sites"
+#    is_bind: true
+#    rw: true
+#  },
   {
     dst: "/tmp"
     fstype: "tmpfs"
