--- a/chal-apache/challenge/Dockerfile
+++ b/chal-apache/challenge/Dockerfile
@@ -33,17 +33,35 @@ RUN apt-get install socat -y --force-yes; exit 0
 RUN mkdir -p /logs
 RUN touch /logs/log
 RUN chmod -R +777 /logs
+RUN chmod a=w /logs/log
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
 COPY --from=chroot / /chroot
 RUN chown -Rc user /chroot/home/user
 
-VOLUME /chroot/logs
-
-VOLUME /chroot/usr/local/apache2/logs
 COPY nsjail.cfg /home/user/nsjail.cfg
 
-CMD kctf_setup \
+RUN apt-get update \
+    && apt-get install -yq --no-install-recommends cron
+RUN apt-get install -y --reinstall rsyslog
+
+ADD cleanup.sh /cleanup.sh
+RUN chmod +777 /cleanup.sh
+
+COPY cron /etc/cron.d/cron
+RUN chmod 0644 /etc/cron.d/cron
+RUN crontab /etc/cron.d/cron
+
+VOLUME /var/log
+VOLUME /run
+VOLUME /tmp
+VOLUME /chroot/logs
+VOLUME /chroot/usr/local/apache2/logs
+
+CMD service rsyslog start; \
+    cron;  \
+    kctf_setup \
     && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start_apache.sh) & \
-    tail -f /chroot/logs/log
+    tail -f /var/log/syslog 
+
