--- a/chal-laravel-latest/challenge/Dockerfile
+++ b/chal-laravel-latest/challenge/Dockerfile
@@ -22,6 +22,7 @@ ENV COMPOSER_BIN /usr/local/bin/composer/composer.phar
 RUN mkdir -p /logs
 RUN touch /logs/log
 RUN chmod -R +777 /logs
+RUN chmod a=w /logs/log
 
 RUN apt-get update && apt-get install -y \
     libonig-dev \
@@ -64,6 +65,21 @@ RUN mkdir -p /home/user \
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
+RUN apt-get update \
+    && apt-get install -yq --no-install-recommends cron
+RUN apt-get install -y --reinstall rsyslog
+
+ADD cleanup.sh /cleanup.sh
+RUN chmod +777 /cleanup.sh
+
+COPY cron /etc/cron.d/cron
+RUN chmod 0644 /etc/cron.d/cron
+RUN crontab /etc/cron.d/cron
+
+VOLUME /var/log
+VOLUME /run
+VOLUME /tmp
+
 COPY --from=chroot / /chroot
 RUN chown -Rc user /chroot/home/user
 RUN chown -Rc user /chroot/var/www/html/laravel/laravel-app/database
@@ -73,6 +89,8 @@ VOLUME /chroot/var/www/html/laravel/
 
 COPY nsjail.cfg /home/user/nsjail.cfg
 
-CMD kctf_setup \
+CMD service rsyslog start; \
+    cron;  \
+    kctf_setup \
     && (kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /usr/local/bin/start.sh) & \
-    tail -f /chroot/logs/log
+    tail -f /var/log/syslog
