--- a/chal-apache-latest/challenge.yaml
+++ b/chal-apache-latest/challenge.yaml
@@ -6,7 +6,7 @@ spec:
   deployed: true
   powDifficultySeconds: 0
   network:
-    public: false
+    public: true
     ports:
       - protocol: "TCP"
         targetPort: 1337
