--- a/chal-apache/challenge/httpd.no-cgid.conf
+++ b/chal-apache/challenge/httpd.no-cgid.conf
@@ -230,7 +230,8 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin you@example.com
+ServerAdmin webmaster@kctf
+ServerName chal-apache.internet-ctf.kctf.cloud
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
