--- a/chal-drupal-latest/challenge/nsjail.cfg
+++ b/chal-drupal-latest/challenge/nsjail.cfg
@@ -58,6 +58,12 @@ mount: [
     is_bind: true
   },
   {
+    src: "/chroot/logs"
+    dst: "/logs"
+    is_bind: true
+    rw: true
+  },
+  {
     src: "/dev"
     dst: "/dev"
     is_bind: true
