--- a/chal-reverb/challenge/Dockerfile
+++ b/chal-reverb/challenge/Dockerfile
@@ -19,14 +19,26 @@ RUN apt-get update \
     && apt-get install -yq --no-install-recommends \
        python3 python3-pip socat nano
 
+#Install socat
+USER root
+RUN echo 'deb http://archive.debian.org/debian/ rodete main' >> /etc/apt/sources.list
+RUN apt-get update; exit 0
+RUN apt-get install socat -y --force-yes; exit 0
+
 RUN pip3 install numpy --upgrade
 RUN pip3 install dm-tree       
 RUN pip3 install dm-reverb[tensorflow]
 RUN pip3 install tensorrt
-#RUN pip3 install numpy --upgrade; pip3 install dm-tree; pip3 install dm-reverb[tensorflow]
+RUN pip3 install numpy --upgrade; pip3 install dm-tree; pip3 install dm-reverb[tensorflow]
+
+#Copy stuff
 RUN chmod +777 /home/user
 ADD script.py /home/user
+ADD app.py /home/user
+#ADD ping.py /home/user
 RUN chmod +777 /home/user/script.py
+RUN chmod +777 /home/user/app.py
+#RUN chmod +777 /home/user/ping.py
 RUN chmod +777 /dev/random
 RUN chmod +777 /dev/urandom
 
@@ -36,7 +48,7 @@ RUN chmod a+wx /home/user/start.sh
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
 
-#VOLUME /chroot/usr/local/lib/python3.10/dist-packages
+VOLUME /chroot/usr/local/lib/python3.10/dist-packages
 VOLUME /chroot/dev
 
 COPY --from=chroot / /chroot
@@ -47,4 +59,4 @@ COPY nsjail.cfg /home/user/
 
 CMD kctf_setup && \
 kctf_setup \
-&& kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /bin/bash -i
+&& kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /home/user/start.sh
