--- a/chal-reverb/challenge/nsjail.cfg
+++ b/chal-reverb/challenge/nsjail.cfg
@@ -68,8 +68,8 @@ mount: [
     rw: true
   },
 #  {
-#    src: "/chroot/usr/local/lib/python3.10/dist-packages"
-#    dst: "/usr/local/lib/python3.10/dist-packages"
+#    src: "/chroot/logs"
+#    dst: "/logs"
 #    is_bind: true
 #    rw: true
 #  },
