--- a/chal-reverb/challenge/Dockerfile
+++ b/chal-reverb/challenge/Dockerfile
@@ -41,11 +41,30 @@ RUN chmod +777 /home/user/app.py
 RUN chmod +777 /dev/random
 RUN chmod +777 /dev/urandom
 
+#RUN mkdir -p /logs
+#RUN touch /logs/log
+#RUN chmod -R +777 /logs
+#RUN chmod a=w /logs/log
+
 ADD start.sh /home/user/start.sh
 RUN chmod a+wx /home/user/start.sh
 
 FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
 
+RUN apt-get update \
+    && apt-get install -yq --no-install-recommends cron
+RUN apt-get install -y --reinstall rsyslog
+
+ADD cleanup.sh /cleanup.sh
+RUN chmod +777 /cleanup.sh
+
+COPY cron /etc/cron.d/cron
+RUN chmod 0644 /etc/cron.d/cron
+RUN crontab /etc/cron.d/cron
+
+VOLUME /var/log
+VOLUME /run
+VOLUME /tmp
 
 VOLUME /chroot/usr/local/lib/python3.10/dist-packages
 VOLUME /chroot/dev
@@ -56,6 +75,9 @@ VOLUME /chroot/home/user
 
 COPY nsjail.cfg /home/user/
 
-CMD kctf_setup && \
+CMD service rsyslog start; \
+    cron;  \
+    kctf_setup && \
     kctf_setup \
-    && kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /home/user/start.sh
+    && kctf_drop_privs nsjail --config /home/user/nsjail.cfg --port 1337 -- /home/user/start.sh \
+    && tail -F /var/log/syslog 
