--- a/chal-reverb/challenge/Dockerfile
+++ b/chal-reverb/challenge/Dockerfile
@@ -42,7 +42,7 @@ RUN chmod +777 /dev/random
 RUN chmod +777 /dev/urandom
 
 RUN mkdir -p /logs
-#RUN touch /logs/log
+RUN touch /logs/log
 #RUN chmod -R +777 /logs
 #RUN chmod a=w /logs/log
 
