--- a/chal-reverb/challenge/Dockerfile
+++ b/chal-reverb/challenge/Dockerfile
@@ -49,7 +49,7 @@ RUN touch /logs/log
 ADD start.sh /home/user/start.sh
 RUN chmod a+wx /home/user/start.sh
 
-FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
+FROM europe-west4-docker.pkg.dev/internet-ctf/custom-images/kctf-source
 
 RUN apt-get update \
     && apt-get install -yq --no-install-recommends cron
