--- a/chal-apache/challenge/Dockerfile
+++ b/chal-apache/challenge/Dockerfile
@@ -35,7 +35,7 @@ RUN touch /logs/log
 RUN chmod -R +777 /logs
 RUN chmod a=w /logs/log
 
-FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
+FROM europe-west4-docker.pkg.dev/internet-ctf/custom-images/kctf-source
 
 COPY --from=chroot / /chroot
 RUN chown -Rc user /chroot/home/user
