--- a/chal-drupal-latest/challenge/Dockerfile
+++ b/chal-drupal-latest/challenge/Dockerfile
@@ -65,7 +65,7 @@ RUN chmod -R +777 /logs
 RUN chmod a=w /logs/log
 
 # Stage 2: Challenge environment
-FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
+FROM europe-west4-docker.pkg.dev/internet-ctf/custom-images/kctf-source
 
 # Copy from chroot stage
 COPY --from=chroot / /chroot
