--- a/chal-laravel-latest/challenge/Dockerfile
+++ b/chal-laravel-latest/challenge/Dockerfile
@@ -63,7 +63,7 @@ RUN cd /var/www/html/laravel/laravel-app/storage/ \
 RUN mkdir -p /home/user \
     && mkdir -p $ROUTES_DIR
 
-FROM gcr.io/kctf-docker/challenge@sha256:0f7d757bcda470c3bbc063606335b915e03795d72ba1d8fdb6f0f9ff3757364f
+FROM europe-west4-docker.pkg.dev/internet-ctf/custom-images/kctf-source
 
 RUN apt-get update \
     && apt-get install -yq --no-install-recommends cron
