--- a/chal-mlflow/healthcheck/Dockerfile
+++ b/chal-mlflow/healthcheck/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM gcr.io/kctf-docker/healthcheck@sha256:6709709a8cfd6e2d743c86d58398c00ca4eb26befd3b1a0a629ab35f91e98ef0
+FROM europe-west4-docker.pkg.dev/internet-ctf/challenges/healthcheck_base
 
 COPY healthcheck_loop.sh healthcheck.py healthz_webserver.py /home/user/
 
