--- a/chal-reverb/challenge/nsjail.cfg
+++ b/chal-reverb/challenge/nsjail.cfg
@@ -67,12 +67,12 @@ mount: [
     is_bind: true
     rw: true
   },
-#  {
-#    src: "/chroot/logs"
-#    dst: "/logs"
-#    is_bind: true
-#    rw: true
-#  },
+  {
+    src: "/chroot/logs"
+    dst: "/logs"
+    is_bind: true
+    rw: true
+  },
   {
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
