--- a/chal-postgresql/challenge/nsjail.cfg
+++ b/chal-postgresql/challenge/nsjail.cfg
@@ -47,5 +47,11 @@ mount: [
     src: "/etc/resolv.conf"
     dst: "/etc/resolv.conf"
     is_bind: true
+  },
+  {
+    src: "/chroot/var/run/postgresql"
+    dst: "/var/run/postgresql"
+    is_bind: true
+    rw: true
   }
 ]
